--- a/public/signin.html
+++ b/public/signin.html
@@ -15,6 +15,7 @@
         </div>
         <button class="btn btn-primary" type="submit">ログイン</button>
       </form>
+      <div>用户名被使用,将不能登录</div>
     </div>
   </nav>
 </body>
