--- a/public/signin.html
+++ b/public/signin.html
@@ -7,16 +7,14 @@
 </head>
 <body>
   <nav class="navbar navbar-default" role="navigation">
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <form class="navbar-form navbar-left" method="post" >
+      <form class="navbar-form" method="post" >
         <div class="form-group">
           <label for="name">ユーザー名</label>
           <input type="text" name="name" id="name" />
+           <button class="btn btn-primary" type="submit">ログイン</button>
         </div>
-        <button class="btn btn-primary" type="submit">ログイン</button>
       </form>
-      <div>用户名被使用,将不能登录</div>
-    </div>
   </nav>
+  <div>用户名被使用,将不能登录</div>
 </body>
 </html>
