--- a/public/signin.html
+++ b/public/signin.html
@@ -15,6 +15,6 @@
         </div>
       </form>
   </nav>
-  <div>用户名被使用,将不能登录</div>
+  <div class="alert alert-danger">使われたユーザーネームでログインできません!</div>
 </body>
 </html>
