--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta charset="utf-8">
     <title>聊天室</title>
     <script type="text/javascript" src="js/jquery.min.js"></script>
@@ -9,6 +10,7 @@
     <script type="text/javascript" src="js/service.lib.js"></script>
     <script type="text/javascript" src="js/example.js"></script>
     <script type="text/javascript" src="js/jquery-ui-1.9.2.custom.min.js"></script>
+    <script type="text/javascript" src="js/jquery.ui.touch-punch.min.js"></script>
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
     <style type="text/css">
       #example {
