wrote README.MD

--- a/public/signin.html
+++ b/public/signin.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>聊天室</title>
+  <title>action service</title>
   <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
 </head>
 <body>
