--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="js/jquery.cookie.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="js/service.lib.js"></script>
+    <script type="text/javascript" src="js/actionHandlers.js"></script>
     <script type="text/javascript" src="js/example.js"></script>
     <script type="text/javascript" src="js/jquery-ui-1.9.2.custom.min.js"></script>
     <script type="text/javascript" src="js/jquery.ui.touch-punch.min.js"></script>
