--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 
     <div class="col-xs-9 col-md-9">
       <div id="container" style="height:380px;border:1px solid black;background-color:lightgreen">
-        <div class="alert alert-success" id="example">example drag</div>
+        <div class="alert-success" id="example">example drag</div>
       </div>
         <div class="animation">
           <button type="button" class="btn btn-primary btn-xs" animation="am1">アニメーション-1</button>
