make random animation

--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,8 @@
         <div class="alert-success" id="example">example drag</div>
       </div>
         <div class="animation">
-          <button type="button" class="btn btn-primary btn-xs" animation="am1">アニメーション-1</button>
-          <button type="button" class="btn btn-primary btn-xs" animation="am2">アニメーション-2</button>
+          <button type="button" class="btn btn-primary btn-xs" id="start">アニメーション-start</button>
+          <button type="button" class="btn btn-primary btn-xs" id="stop">アニメーション-stop</button>
         </div>
     </div>
 
