添加开机自动启动文件

--- a/public/login.html
+++ b/public/login.html
@@ -9,8 +9,8 @@
   <nav class="navbar navbar-default" role="navigation">
       <form class="navbar-form" method="post" >
         <div class="form-group">
-          <label for="name">ユーザー名</label>
-          <input type="text" name="name" id="name" />
+          <label for="username">ユーザー名</label>
+          <input type="text" name="username" id="username" />
            <button class="btn btn-primary" type="submit">ログイン</button>
         </div>
       </form>
