--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>action service</title>
     <script type="text/javascript" src="js/jquery.min.js"></script>
+     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/jquery.cookie.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="js/service.lib.js"></script>
@@ -66,13 +67,18 @@
    </div><!-- div.row -->
    <div id="responseWS"></div><br />
 
-   <div id="record">
+   <div id="record" style="width:350px;">
     <form role="form" onsubmit="return recordLocalEventHandler(event,'start')">
       <label for="log-name">記録のname</label>
       <input type="text" name="log-name" value="">
       <button type="submit" class="btn btn-default">記録Start</button>
     </form>
+
+    <select multiple class="form-control" id="recordList">
+    </select>
+    <button id="readRecord" type="submit" class="btn btn-default" onclick="readRecord()">Start</button>
    </div>
+
 
  </div><!-- div.container -->
 </body>
